--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- ===============  CSS  =============== -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <title>Erdi Şener Cv</title>
+    <title>Erdi Sener CV</title>
 </head>
 
 <body>
@@ -254,25 +254,20 @@
 
                     <div class="experience__container bd-grid">
                         <div class="experience__content">
-                            1989 yılında Bursa'da doğdu. Endüstri Mühendisliği öğrenimini 2012 yılında tamamlayarak farklı sektörlerde ar-ge ve proje mühendisliği yaptı.
+                            He was born in Bursa in 1989. He completed his Industrial Engineering education in 2012 and worked as a R&D and project engineer in different sectors.
                         </div>
                         <div class="experience__content">
-                            2017 yılında yazılım dillerine ilgi duymaya başladı. "CS50: Introduction to Computer Science" eğitimi yanısıra farklı birçok Frontend ve 
-                            UI/UX eğitimleri alarak kendini geliştirdi.
-                            Figma ile tasarım taslakları hazırlayıp, öğrendiği dillerle küçük projeler geliştirdi.
-                            Hatta yüksek lisans tezini de burada edindiği bilgileri kullanarak tamamladı.
+                            In 2017, he started to be interested in programming languages. In addition to the "Harvard CS50: Introduction to Computer Science" course, he improved himself by taking many different Frontend and UI/UX courses. He prepared design drafts with Figma and developed small projects with the languages he trained. He completed his master's thesis titled "Autonomous and Shared Vehicle Management System" by using the practices.
 
                         </div>
                         <div class="experience__content">
-                            Eylül 2020'de tam zamanlı olarak PHP Developer olarak yazılım hayatına başladı.
-                            PHP projeleriyle birlikte HTML, CSS, Javascript,
-                            Bootstrap ve Web Servisler kullanarak Full Cycle ve Support projeler içerisinde yer aldı. 
+                            He started his software journey as a full-time PHP Developer in September 2020. Along with PHP projects, he took part in Full Cycle and Support projects using HTML, CSS, Javascript, Bootstrap and Web Services.
                         </div>
                         <div class="experience__content">
-                            Ocak 2022 itibariyle kariyerine Frontend developer olarak devam etmektedir. Özellikle Vue JS kullanarak müşterilere özel projeler üretmektedir.
+                            As of January 2022, he continues his career as a Frontend developer. It produces special projects for customers, especially using Vue JS.
                         </div>
                         <div class="experience__content">
-                            Topluluk, Startup Trakya, Birlikte İhracat gibi topluluklar içerisinde güncel Frontend ve tasarım gruplarını yakından takip etmektedir.
+                            He closely follows up-to-date Frontend and design groups in communities such as "Kommunity", "Startup Trakya", "Birlikte İhracat"
                         </div>
                     </div>
                 </section>
