--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
     <!-- ===============  CSS  =============== -->
     <link rel="stylesheet" href="./assets/css/style.css">
-
+    <meta name="description" content="Frontend Developer">
     <title>Erdi Sener CV</title>
+    
 </head>
 
 <body>
